# Optimo

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SETUP.md  cli.py  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
jobagent/: __init__.py  config.py  llm.py  matcher.py  models.py  pipeline.py  resume.py  tailor.py  tracker.py
jobagent/sources/: __init__.py  adzuna.py  base.py  greenhouse.py  jsearch.py  remoteok.py  websearch.py
tests/: test_matcher.py  test_tracker.py
