[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optimo"
version = "0.1.0"
description = "Optimo — an open-source, LLM-powered job search agent: find & rank jobs, tailor applications, track progress."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nitesh" }]
keywords = ["jobs", "job-search", "llm", "agent", "ollama"]
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "streamlit>=1.33",
]

[project.optional-dependencies]
pdf = ["pypdf>=4.0"]
dev = ["pytest>=8.0"]

[project.scripts]
optimo = "cli:main"

[tool.setuptools]
packages = ["jobagent", "jobagent.sources"]
py-modules = ["cli"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
